--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "12.16.3",
-    "npm": "6.14.4"
+    "node": "14.x",
+    "npm": "6.x"
   },
   "scripts": {
     "start": "node index.js",
